<resources>
    <string name="app_name">My Vocabulary</string>
    <string name="example_dictionary_name">Example Dictionary</string>
    <string name="library_button">Library</string>
    <string name="quizzes_button">Quiz</string>
    <string name="add_a_title">Add a title</string>
    <string name="create_dictionary_hint">Enter a title</string>
    <string name="rename_dictionary_hint">Enter a new title</string>
    <string name="create_expression_hint">new expression</string>
    <string name="create_translation_hint">new translation</string>
    <string name="quiz_size_hint">Number of words</string>
    <string name="create_new_dictionary_dialog_title">Create New Dictionary</string>
    <string name="create_button_label">Create</string>
    <string name="dialog_rename_button_label">Rename</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="please_enter_a_title">Please enter a title</string>
    <string name="please_enter_a_word">Please enter meaning</string>
    <string name="please_enter_expression">Please enter expression</string>
    <string name="row_dictionary_options_dots">⋮</string>
    <string name="word_menu_edit_label">Edit</string>
    <string name="dialog_delete_word_title">Deleting word</string>
    <string name="dictionary_menu_rename">Rename</string>
    <string name="dictionary_menu_delete">Delete</string>
    <string name="dialog_delete_dictionary_title">Deleting dictionary</string>
    <string name="dialog_rename_dictionary_dialog_title">Rename dictionary</string>
    <string name="word_list_dictionary_title_hint">Dictionary title</string>
    <string name="word_list_expression">Expression</string>
    <string name="word_list_meaning">Translation</string>
    <string name="create_new_word_dialog_title">Create</string>
    <string name="edit_word_dialog_title">Edit</string>
    <string name="save_button_label">Save</string>
    <string name="start_button_label">Start</string>
    <string name="add_more_button_label">Add more</string>
    <string name="quiz_list_choose_a_quiz_type">Choose a quiz type</string>
    <string name="quiz_list_quick_one">Quick One</string>
    <string name="quiz_list_ask_me_everything">Ask Me Everything</string>
    <string name="quiz_list_weaknesses">Weaknesses</string>
    <string name="quiz_list_custom">Custom</string>
    <string name="quiz_dictionary_picker_title">Pick a dictionary</string>
    <string name="dialog_pick_direction">"Choose what should be the question"</string>
    <string name="dialog_lets_do_it">"Let's do it"</string>
    <string name="dialog_option_picker_error">"Please select one of the options!"</string>
    <string name="dialog_quiz_type_error">"Please select one of the quiz types!"</string>
    <string name="quiz_hint_enter_solution">Your answer</string>
    <string name="result_fragment_title">Results</string>
    <string name="tick_description">Correct answer icon</string>
    <string name="wrong_answer_icon_description">Wrong answer icon</string>
    <string name="result_failed_ones_only_label">Failed Ones Only</string>
    <string name="result_start_over_label">Start Over</string>
    <string name="my_vocabulary_app_title">My Vocabulary</string>
    <string name="quiz_toolbar">Quiz Time</string>
    <string name="dictionaries_toolbar">Library</string>
    <string name="quizzes_toolbar">Quizzes</string>
    <string name="dictionary_menu_start_quiz">Start Quiz</string>
    <string name="word_details_toolbar">Word Details</string>
    <string name="translation_colon">Translation:</string>
    <string name="expression_colon">Expression:</string>
    <string name="word_detail_attempts_so_far">Attempts so far:</string>
    <string name="passed_colon">Passed:</string>
    <string name="failed_colon">Failed:</string>
    <string name="last_result_colon">Last Result:</string>
    <string name="passed">Passed</string>
    <string name="failed">Failed</string>
    <string name="details_created">Created:</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="info_dialog">Got it</string>
    <string name="empty_dictionary_notification">This dictionary is empty.</string>
    <string name="verify_deletion">Are you sure you want to delete</string>
    <string name="quick_list_info">Asks all the expressions from the selected dictionary</string>
    <string name="ask_everything_info">Asks 5 random expressions from the selected dictionary</string>
    <string name="weaknesses_info">Asks the 5 most failed expressions from the selected dictionary</string>
    <string name="custom_info">You can enter how many words you want to be picked from the selected dictionary</string>
    <string name="renaming_dictionary_title">Renaming</string>
    <string name="example_dictionary_title">Example Dictionary</string>
    <string name="example_word_hello">hello</string>
    <string name="example_word_thank_you">thank you</string>
    <string name="example_word_friend">friend</string>
    <string name="example_word_family">family</string>
    <string name="example_word_water">water</string>
    <string name="example_word_coffee">coffee</string>
    <string name="example_word_money">money</string>
    <string name="example_word_travel">travel</string>
    <string name="example_word_home">home</string>
    <string name="example_word_school">school</string>
    <string name="example_translation_hello">szia</string>
    <string name="example_translation_thank_you">köszönöm</string>
    <string name="example_translation_friend">barát</string>
    <string name="example_translation_family">család</string>
    <string name="example_translation_water">víz</string>
    <string name="example_translation_coffee">kávé</string>
    <string name="example_translation_money">pénz</string>
    <string name="example_translation_travel">utazás</string>
    <string name="example_translation_home">otthon</string>
    <string name="example_translation_school">iskola</string>
    <string name="sort_by_date">Sort by Created Date</string>
    <string name="empty_dictionary_state_message">Add an expression and it will show up here.</string>
    <string name="result_stats">%1$d / %2$d - %3$d%%</string>
    <string name="thanks">Thanks</string>
    <string name="quote_text">\"%1$s\"</string>
    <string name="word_hint">Add translation</string>
    <string name="import_dictionary_dialog_title">Import dictionary</string>
    <string name="import_dictionary_menu">Import Dictionary</string>
    <string name="only_csv_import">Only CSV files can be imported.</string>
    <string name="import_fab_label">Import</string>
    <string name="create_fab_label">New</string>
    <string name="export_menu_label">Share</string>
    <string name="dropdown_menu_label">Dropdown menu icon</string>
    <string name="share_file_title">Share file</string>
    <string name="search">Search</string>
    <string name="search_hint">Search&#8230;</string>
    <string name="number_of_words">Number of words: %1$d</string>
    <string name="dictionary_title">Title</string>
    <string name="custom_dialog_title">Enter number of words to be asked</string>
    <string name="custom_dialog_error">Please only use numbers higher than 0</string>
    <string name="back_arrow">Go back</string>
    <string name="home_info">Info about developer</string>
    <string name="about_appbar">About</string>
    <string name="dict_options_description">Dictionary Options Button</string>
    <string name="dictionary_fab_description">Add dictionary</string>
    <string name="quiz_fab_next">Quiz Next</string>
    <string name="once_more">Once More</string>
    <string name="exit_fab_label">Exit</string>
    <string name="add_a_number">Add a number</string>
    <string name="no_dictionaries_found">There are no dictionaries in the library</string>
    <string name="clear_search">Clear search</string>
    <string name="sort_by_title">Sort A-Z</string>
    <string name="sort_by_expression">Sort by Expression</string>
    <string name="sort_by_translation">Sort by Translation</string>
    <string name="empty_list_snackbar">No words found for this quiz.</string>
    <string name="home_label">Home</string>
    <string name="last_practiced_label">Last practiced:</string>
    <string name="average_rate_label">Average rate:</string>
    <string name="last_time_practiced_label">Last time practiced:</string>
    <string name="most_practiced_label">Most practiced:</string>
    <string name="last_practiced_placeholder">Your latest session stats will show up here. Let’s get practicing!</string>
    <string name="most_practiced_placeholder">Once you’ve used a few dictionaries, your most-practiced ones will appear here.</string>
    <string name="memorise_label">Memorise</string>
    <string name="memorise_placeholder">These are the words and expressions to review. Keep going — you’ve got this!</string>
    <string name="quote_title">Quote of the day</string>
    <string name="snack_bar_error">An error occurred while loading the word list.</string>
    <string name="last_practiced_placeholder_title">Last practiced</string>
    <string name="most_practiced_placeholder_title">Most practiced</string>

    <string name="login_welcome_title">Welcome to My Vocabulary</string>
    <string name="login_welcome_subtitle">Sign in to securely save your dictionaries and access them anywhere.</string>
    <string name="login_google_button">Sign in with Google</string>
    <string name="login_error_prefix">Login failed: %1$s</string>
    <string name="login_loading">Signing in&#8230;</string>
    <string name="profile_logout">Logout</string>

    <string name="sync_mobile_data_title">Mobile Data Warning</string>
    <string name="sync_mobile_data_message">You are currently using mobile data. Moving your dictionaries to the cloud may use a significant amount of data. Do you want to proceed now or wait until you are on Wi-Fi?</string>
    <string name="sync_proceed_anyway">Proceed anyway</string>
    <string name="sync_wait_wifi">Wait for Wi-Fi</string>
    <string name="sync_in_progress">Sync in progress&#8230;</string>
</resources>
