<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/quiz_type_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:text="@string/quiz_list_choose_a_quiz_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/quiz_type_radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_type_title">

        <RadioButton
            android:id="@+id/quick_quiz_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:checked="true"
            android:padding="@dimen/padding_normal"
            android:text="@string/quiz_list_quick_one"
            android:textSize="@dimen/text_size_normal" />

        <RadioButton
            android:id="@+id/full_quiz_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:padding="@dimen/padding_normal"
            android:text="@string/quiz_list_ask_me_everything"
            android:textSize="@dimen/text_size_normal" />

        <RadioButton
            android:id="@+id/weakness_quiz_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:padding="@dimen/padding_normal"
            android:text="@string/quiz_list_weaknesses"
            android:textSize="@dimen/text_size_normal" />

        <RadioButton
            android:id="@+id/custom_quiz_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:padding="@dimen/padding_normal"
            android:text="@string/quiz_list_custom"
            android:textSize="@dimen/text_size_normal" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/custom_quiz_layout"
            app:errorEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_medium"
            tools:visibility="visible">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/custom_quiz_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quiz_size_hint"
                android:inputType="number"
                app:errorEnabled="true"/>
        </com.google.android.material.textfield.TextInputLayout>
<!--        <EditText-->
<!--            android:id="@+id/custom_quiz_size"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="@dimen/margin_medium"-->
<!--            android:layout_marginTop="@dimen/margin_medium"-->
<!--            android:layout_marginEnd="@dimen/margin_medium"-->
<!--            android:layout_marginBottom="@dimen/margin_medium"-->
<!--            android:hint="@string/quiz_size_hint"-->
<!--            android:inputType="number"-->
<!--            android:paddingTop="@dimen/padding_normal"-->
<!--            android:visibility="gone"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            tools:visibility="visible" />-->
    </RadioGroup>

    <TextView
        android:id="@+id/direction_picker_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:text="@string/dialog_pick_direction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_type_radioGroup" />

    <RadioGroup
        android:id="@+id/direction_radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/direction_picker_title">

        <RadioButton
            android:id="@+id/from_dictionary_word_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:checked="true"
            android:padding="@dimen/padding_normal"
            android:text="@string/word_list_meaning"
            android:textSize="@dimen/text_size_normal" />

        <RadioButton
            android:id="@+id/from_dictionary_translation_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:padding="@dimen/padding_normal"
            android:text="@string/word_list_expression"
            android:textSize="@dimen/text_size_normal" />
    </RadioGroup>

    <Button
        android:id="@+id/from_dictionary_lets_do_it"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:text="@string/dialog_lets_do_it"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/direction_radioGroup" />

    <Button
        android:id="@+id/from_dictionary_cancel"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:text="@string/cancel_button_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/from_dictionary_lets_do_it"
        app:layout_constraintTop_toBottomOf="@+id/direction_radioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>